<resources>
    <string name="app_name">Apnea Sleep Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_stats">Clear stats</string>
    <string name="action_stats">Stats</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_stop">Stop</string>
    <string name="started">Started</string>
    <string name="paused">Paused</string>
    <string name="sleeping">Getting Asleep</string>
    <string name="paused_for">Paused for %1$s</string>
    <string name="stopped">Stopped</string>
    <string name="legend">Quantity / hh:mm:ss (% of total time)</string>
    <string name="left_side">Left side</string>
    <string name="right_side">Right side</string>
    <string name="back">Back</string>
    <string name="stomach">Stomach</string>
    <string name="getUp">Gotten up</string>
    <string name="totals">Totals</string>
    <string name="title_activity_settings">Settings</string>

    <string name="dialog_sure_clear_stats">Are you sure you want to clear stats?</string>
    <string name="clear">Yes, clear stats</string>
    <string name="cancel">Cancel</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_alarm_stomach">Alarm stomach</string>
    <string name="pref_description_alarm_stomach">Alarm also if you are sleeping on your stomach
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_pause_in_minutes">Pause in minutes</string>
    <string-array name="pref_pause_in_minutes_list_titles">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
    </string-array>
    <string-array name="pref_pause_in_minutes_list_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>

    <string name="pref_title_device_orientation">Device orientation</string>
    <string-array name="pref_device_orientation_list_titles">
        <item>Left</item>
        <item>Right</item>
        <item>Up</item>
        <item>Down</item>
    </string-array>
    <string-array name="pref_device_orientation_list_values">
        <item>Left</item>
        <item>Right</item>
        <item>Up</item>
        <item>Down</item>
    </string-array>

    <string name="pref_title_volume_raise">Raise volume each X seconds</string>
    <string-array name="pref_volume_raise_list_titles">
        <item>1 second</item>
        <item>2 seconds</item>
        <item>3 seconds</item>
        <item>4 seconds</item>
    </string-array>
    <string-array name="pref_volume_raise_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="pref_title_seconds_to_vibrate">Vibrate after X seconds</string>
    <string-array name="pref_seconds_to_vibrate_list_titles">
        <item>3 seconds</item>
        <item>6 seconds</item>
        <item>15 seconds</item>
        <item>25 seconds</item>
    </string-array>
    <string-array name="pref_seconds_to_vibrate_list_values">
        <item>3</item>
        <item>6</item>
        <item>15</item>
        <item>25</item>
    </string-array>/

    <string name="pref_minutes_to_start">Start noticing after X</string>
    <string-array name="pref_minutes_to_start_list_titles">
        <item>0 segundos</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>60 minutes</item>
        <item>90 minutes</item>
        <item>120 minutes</item>
    </string-array>
    <string-array name="pref_minutes_to_start_list_values">
        <item>0</item>
        <item>10</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
    </string-array>

    <string name="pref_title_seconds_to_sound">Start sound after X seconds</string>
    <string-array name="pref_seconds_to_sound_list_titles">
        <item>6 seconds</item>
        <item>12 seconds</item>
        <item>25 seconds</item>
        <item>35 seconds</item>
    </string-array>
    <string-array name="pref_seconds_to_sound_list_values">
        <item>6</item>
        <item>12</item>
        <item>25</item>
        <item>35</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="totalAlarms">Vibrations: %1$d  -  Sounds: %2$d</string>

    <string name="sound_level">Sound level</string>
    <string name="avg_decibels">Avg dB</string>
    <string name="max_decibels">Max dB</string>
    <string name="current_db">Current: %1$.1f dB</string>
    <string name="sound_level_off">Sound: off</string>
    <string name="sleep_detail">Sleep detail</string>
    <string name="position">Position</string>
    <string name="tap_to_detail">Tap a session on the chart to see details</string>
</resources>
